tests/e2e/service_error_intentb.story
a = http server to t
